cmake_minimum_required(VERSION 2.6)
project(libg35)

set(CMAKE_INSTALL_PREFIX /usr/local/)

add_library(g35 SHARED g35.c g35uinput.c)
target_link_libraries(g35 usb)

install(TARGETS g35
    DESTINATION "lib"
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(FILES libg35.h
    DESTINATION "include"
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
